src/test/deca/context/invalid/created/test-a-18.deca
class A{
    int x;
    protected float y;
}

class B extends A{
    int z;
    int w;
    void SetX(){
        x = z;
    }
    void setY(int w){
        y = w;
    }
}

class C extends A{
    int z;
    protected int w;
    void SetX(){
        x = z;
    }
    int toInt(float x){
        return 5;
    }
}

{
    A a ;
    a.x = 15;
}